--- a/style.css
+++ b/style.css
@@ -91,6 +91,9 @@ a {
     height: 200px;
     width: 190px;
   }
+  .card-title {
+    font-size: 12px !important;
+  }
   .card-text {
     font-size: 16px;
     margin-bottom: 10px;
